--- a/test/header/header.html
+++ b/test/header/header.html
@@ -5,25 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="./fontawesome-free-5.13.0-web/css/all.css">
     <title>Header</title>
 </head>
 <body>
     
     <nav>
         <div class="logo"><h1> Deltaty</h1></div>
-        <div class="openMenu"><i class="fa fa-bars">Open</i></div>
+        <div class="openMenu"> <i>Open</i> </div>
         <ul class="mainMenu">
             <li><a href="#">Home</a></li>
             <li><a href="#">Products</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Account</a></li>
-            <div class="closeMenu"><i class="fa fa-times"> close <span class="icons">
+            <div class="closeMenu"> <i>CLose</i>
                 <i class="fab fa-facebook"></i>
                 <i class="fab fa-twitter"></i>
                 <i class="fab fa-instgram"></i>
                 <i class="fab fa-github"></i>
-            </span></i></div>
+            </div>
         </ul>
     </nav>
 
