connect_newDB_Firebase

--- a/auth/index.html
+++ b/auth/index.html
@@ -23,7 +23,9 @@ rel="stylesheet"
     <title>Authenticate</title>
 </head>
 <body>
+ 
     <form>
+      <h3 class="text-center">Registration / login Form</h3>
         <!-- Email input -->
         <div class="form-outline mb-4">
           <input type="email" id="inputemail" class="form-control" />
@@ -48,8 +50,10 @@ rel="stylesheet"
       
         <!-- Submit button -->
         <button type="submit" class="btn btn-primary btn-block mb-3" id="signin">Sign in</button>
-        <button type="submit" class="btn btn-primary btn-block">Sign up</button>
+        <button type="submit" class="btn btn-primary btn-block" id="signout">Sign up</button>
     </form>
-      
+    <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.6.0/firebase-auth.js"></script>
+      <sc src="app.js"></script>
 </body>
 </html>
