--- a/auth/index.html
+++ b/auth/index.html
@@ -50,10 +50,11 @@ rel="stylesheet"
       
         <!-- Submit button -->
         <button type="submit" class="btn btn-primary btn-block mb-3" id="signin">Sign in</button>
-        <button type="submit" class="btn btn-primary btn-block" id="signout">Sign up</button>
+        <button type="submit" class="btn btn-primary btn-block" id="Signup">Sign up</button>
     </form>
+    <h5 id="user"> Welcome User :</h5>
     <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.6.0/firebase-auth.js"></script>
-      <sc src="app.js"></script>
+      <script src="app.js"></script>
 </body>
 </html>
